--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
+    "mongodb": "^3.1.10",
     "mongojs": "^2.6.0",
     "mz": "^2.7.0",
     "passport": "^0.4.0",
